add background image

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-  <main>
+  <main class="main-container">
     <section class="form-section">
       <h1 class="page-title">URL Shortener</h1>
       <form class="url-form">
